# sentinel-deep-agents-hack

./: .env.example  .gitignore  ABOUT.md  CLAUDE.md  Caddyfile  DEPLOYMENT.md  Dockerfile  FRONTEND-DESIGN-GUIDE.md  QUICKSTART.md  README.md  aerospike.conf  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  sentinel_deep_agents_spec.md  vercel.json
.github/workflows/: deploy-ec2.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
frontend/: .env.production  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  demoData.js  index.css  main.jsx  store.js
scripts/: README.md  demo_check.py  deploy-all.sh  deploy-ec2.sh  deploy-vercel.sh  deploy.sh  dry_run.py  ec2-init.sh  install-systemd-service.sh  latency_bench.py  preflight-check.sh  quick-deploy.md  reset_demo.py  sentinel.service  setup-ec2-instance.sh  verify-deployment.sh
sentinel/: __init__.py  config.py  llm_client.py
sentinel/agents/: __init__.py  compliance.py  forensics.py  payment_agent.py  (+2 more)
tests/: conftest.py  test_airbyte_slack.py  test_api.py  test_bland_call.py  test_bland_webhook.py  test_claude_api.py  test_confirm_route.py  test_end_to_end_loop.py  test_fixtures.py  test_infra.py  test_llm_client.py  test_memory_stores.py  test_narrative.py  test_payment_agent.py  test_prediction.py  test_rule_generator.py  test_rule_store.py  test_safety_gate.py  test_schemas.py  test_sub_agents.py  test_supervisor.py
(+179 files in other folders)
