[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Runtime multi-agent supervision system for autonomous payment agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.14",
    "uvicorn[standard]>=0.34,<0.35",
    "anthropic[aiohttp,bedrock]==0.86.0",
    "aerospike==19.1.0",
    "RestrictedPython==8.1",
    "pydantic>=2.12,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
